Sat Dec 25 22:08:04 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/with_diffent_ofs.rb (DifferentOFS): test suite for test
	  suites affected by $,.

	* test/digest/test_digest_extend.rb (TestDigestExtend): should not
	  assume $, invariant.

	* test/csv/test_data_converters.rb, test/csv/test_table.rb: don't
	  not call setup within tests.

Sat Dec 25 20:01:40 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (pipe_open): Added rb_thread_atfork(). We must reinitialize
	  GVL at new process creation.

Sat Dec 25 18:26:55 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_ipv6_mreq): new function to inspect
	  struct ipv6_mreq for IPV6_JOIN_GROUP and IPV6_LEAVE_GROUP.
	  Socket::Option.new(:INET6, :IPV6, :JOIN_GROUP,
	  [0xff12,0,0,0,0,0,0,1, 2].pack("nnnnnnnnI!")).inspect is now:
	  "#<Socket::Option: INET6 IPV6 JOIN_GROUP ff12::1 eth0>"

	* ext/socket/extconf.rb: check struct ipv6_mreq.

Sat Dec 25 18:04:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/csv.rb (CSV.foreach): 'rb' mode is defaulted in open.

	* lib/csv.rb (CSV#init_separators): cannonicalize encoding options
	  as Encoding objects.

Sat Dec 25 18:30:34 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_atfork): Add small comment why we need
	  reset random seed.

Sat Dec 25 17:33:55 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/csv/base.rb (TestCSV.with_diffrent_ofs): give name to
	  anonymous classes.

	* lib/csv.rb (CSV#init_separators): use IO#gets with length
	  parameter to get rid of wrong convertion.

	* lib/csv.rb (CSV::foreach, CSV#initialize): directly use encoding

	* lib/csv.rb, test/csv: should not assume $, invariant.

Sat Dec 25 16:08:06 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c: change rb_atomic_t definition from uchar to uint.

Sat Dec 25 15:04:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/csv/test_encodings.rb (TestEncodings#setup): fix evil test