@@ -38,6 +38,10 @@ class TestDigestExtend < Test::Unit::TestCase
     end
   end
 
+  def setup
+    @MyDigest = Class.new(MyDigest)
+  end
+
   def test_digest_s_hexencode
     assert_equal('', Digest.hexencode(''))
     assert_equal('0102', Digest.hexencode("\1\2"))
@@ -63,11 +67,11 @@ class TestDigestExtend < Test::Unit::TestCase
   end
 
   def test_hexdigest
-    assert_equal("03", MyDigest.hexdigest("foo"))
+    assert_equal("03", @MyDigest.hexdigest("foo"))
   end
 
   def test_context
-    digester = MyDigest.new
+    digester = @MyDigest.new
     digester.update("foo")
     assert_equal("\3", digester.digest)
     digester.update("foobar")
@@ -91,7 +95,7 @@ class TestDigestExtend < Test::Unit::TestCase
     [:digest, :hexdigest].each do |m|
       exp_1st = "\3"; exp_1st = Digest.hexencode(exp_1st) if m == :hexdigest
       exp_2nd = "\6"; exp_2nd = Digest.hexencode(exp_2nd) if m == :hexdigest
-      digester = MyDigest.new
+      digester = @MyDigest.new
       digester.update("foo")
       obj = digester.send(m)
       # digest w/o param does not reset the org digester.
@@ -108,7 +112,7 @@ class TestDigestExtend < Test::Unit::TestCase
   def test_digest_hexdigest_bang
     [:digest!, :hexdigest!].each do |m|
       exp_1st = "\3"; exp_1st = Digest.hexencode(exp_1st) if m == :hexdigest!
-      digester = MyDigest.new
+      digester = @MyDigest.new
       digester.update("foo")
       obj = digester.send(m) # digest! always resets the org digester.
       assert_equal(exp_1st, obj)
@@ -119,30 +123,35 @@ class TestDigestExtend < Test::Unit::TestCase
   end
 
   def test_to_s
-    digester = MyDigest.new
+    digester = @MyDigest.new
     digester.update("foo")
     assert_equal("03", digester.to_s)
   end
 
   def test_length
-    digester = MyDigest.new
-    assert_equal(2, digester.length)
-    assert_equal(2, digester.size)
-  end
-
-  def test_digest_length # breaks MyDigest#digest_length
-    assert_equal(1, MyDigest.new.digest_length)
-    MyDigest.class_eval do
+    @MyDigest.class_eval do
       def digest_length
         2
       end
     end
-    assert_equal(2, MyDigest.new.digest_length)
+    digester = @MyDigest.new
+    assert_equal(2, digester.length)
+    assert_equal(2, digester.size)
+  end
+
+  def test_digest_length # breaks @MyDigest#digest_length
+    assert_equal(1, @MyDigest.new.digest_length)
+    @MyDigest.class_eval do
+      def digest_length
+        2
+      end
+    end
+    assert_equal(2, @MyDigest.new.digest_length)
   end
 
   def test_block_length
     assert_raises(RuntimeError) do
-      MyDigest.new.block_length
+      @MyDigest.new.block_length
     end
   end
 end
